[tool.poetry]
name = "sabres"
version = "1.1.0"
description = "A tool that scans VCF data for SARS-CoV-2 Antiviral Resistance"
authors = ["Winkie Fong <winkie.fong@health.nsw.gov.au>"]
license = "LICENSE.md"

[tool.poetry.dependencies]
python = ">=3.7.9"
pandas = "1.3.5"
numpy = "1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sabres = "sabres.cli:main"