[tool.poetry]
name = "sabres"
version = "1.2.2"
description = "A tool that scans VCF data for SARS-CoV-2 Antiviral Resistance"
authors = ["Winkie Fong <winkie.fong@health.nsw.gov.au>"]
license = "LICENSE.md"

[tool.poetry.dependencies]
python = ">=3.11.3"
pandas = "2.0.0"
numpy = "1.24.2"
exi
[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sabres = "sabres.cli:main"